# Nebiux_ITC_2026

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Dockerfile  README.md  cpp_hybrid_rag_uml_planning_guide.md  docker-compose.hosted.yml  docker-compose.yml  peer-review.md  pyproject.toml
.claude/: settings.local.json
competition-prompt/: MISSA-ITC-AI-2026-Prompt.md
dataset/: README.md
docker/: entrypoint.sh
docs/: adversarial-review-v0.1.md  documentation-drift-report-2026-04-09.md  implementation-plan-v0.1.md  issue-18-setup-architecture.md  issue-setup-gemini-api-call-audit.md  issue-setup-gemini-api-call-plan.md  judging-and-deployment.md  rag-plan.md  system-architecture.md
docs/v0.1/: README.md  (+6 more)
frontend/: .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
researchs/: RAG-deep-research-report (1).md
scripts/: build_index.py  check_corpus.py  deploy_hosted.sh  smoke_rag_pipeline.py
src/: __init__.py  audio_transcription.py  citations.py  config.py  models.py  observability.py  settings.py
tests/: fakes.py  test_admin_api.py  test_api.py  test_build_index.py  test_chroma_index.py  test_citations.py  test_conflicts.py  test_entrypoint.py  test_eval_harness.py  test_extract_metadata.py  test_filter_corpus.py  test_freshness.py  test_grounding.py  test_hosted_config.py  test_models.py  test_observability.py  test_pipeline.py  test_query_normalizer.py  test_settings.py  test_strip_boilerplate.py  test_support_routing.py  test_tool_loop_grounding.py
(+73 files in other folders)
